Fix: user/mypage/editinfo를 editnick의 기능으로 변경
